--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -49,11 +51,13 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
+    "sort-by": "^1.2.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwind": "^4.0.0",
