--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "css-loader": "^6.7.3",
@@ -28,7 +29,14 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1",
+    "sort-by": "^1.2.0"
   }
 }
