--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "build": "webpack"
+    "start": "cross-env NODE_ENV=development webpack serve --open",
+    "build:prod": "cross-env NODE_ENV=production webpack",
+    "build:dev": "cross-env NODE_ENV=development webpack"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +15,7 @@
     "@redux-devtools/core": "^3.13.1",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
