--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
     "@types/react": "^18.0.29",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.11",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "animate.css": "^4.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -37,6 +39,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^5.3.9"
   }
 }
