--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "animate.css": "^4.1.1",
+    "date-fns": "^2.29.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
