--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.29",
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
@@ -40,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.9"
